--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
-Copy (with credit, of course) extend from http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.js -- it's not too long
 Add prototype-lifecycle option for complex value objects
+loadConfig overwrite completion and tests
